syntax = "proto3";
package GRPCProto;

option csharp_namespace = "GRPCService.GRPCProto";

service DataBase {
    rpc SavePdfFileInfo (PdfFileInfo) returns (JobInfo) {}
}

service GateWay {
    rpc PostJobInfo (JobInfo) returns (Empty) {}
}

message Empty {
}

message PdfFileInfo {
    string MD5 = 1;
    int64 FileLength = 2;
}

message CommonResponse {
    bool isError = 1;
    string ErrorMessage = 2;
}

message DatabaseCreateFileInfoResponse {
    CommonResponse error = 1;
    string fileId = 2;   
}

enum EnumJobStatus {
    EXECUTE = 0;
    DONE = 1;
    ERROR = 2;
}

message JobInfo {
    EnumJobStatus JobStatus = 1; 
    string JobId = 2;
    string Message = 3;
}